[tool.poetry]
name = "confidant"
version = "0.1.0"
description = ""
authors = ["Tanmay patil <tanmaypatil3151@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.3"
typer = "^0.15.2"
cryptography = "^44.0.2"
python-dotenv = "^1.1.0"
watchdog = "^6.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
